--- a/CrossCloudService/web/querying.html
+++ b/CrossCloudService/web/querying.html
@@ -45,7 +45,7 @@
 			var sPassword = document.getElementById('password').value;
 			var user;
 			if(username != "" && sPassword != ""){
-				var sUrl = URL + "services/RDF/login?username="+username+"&password="+sPassword;
+				var sUrl = URL + "server/"+"RDF"+"/login?username="+username+"&password="+sPassword;
 				$.ajax({
 					type: "GET",
 					url: sUrl,
@@ -84,37 +84,38 @@
 	<script type="text/javascript">		
 		// The main function for performing the query
 		function performQuery(sUsername, sPath)
-		{
-			arrayVars = new Array();
-			arrayBindings = new Array();
-			var sQuery =  $("#query").val();
-			if(sQuery == ""){
-				alert("Please type a query to submit.");
-			}else{
-				var query = {"statement": sQuery};
-				var sUrl = URL + "services/RDF/query";
-				$.ajax({
-						type: "POST",
-						url: sUrl,
-						contentType: "application/json",
-						data: JSON.stringify(query),
-						//dataType: "json",
-						async: false,
-						success: function parse(resp, status, xhr) {
-						   $("#message").html("STATUS: " + xhr.status + " " + xhr.statusText + "\n" + resp);
-						   $("#message").hide();
-							arrayVars = resp.head.vars;
- 							arrayBindings = resp.results.bindings;
-							renderQuery();
-						},
-						error: function(resp, status, xhr){
-							$("#message").html("ERROR: " + resp.status + " " + resp.statusText + "\n" + xhr);
-							$("#message").show();
-						}
-						
-					});	
-				}
-		}
+              {
+                     arrayVars = new Array();
+                     arrayBindings = new Array();
+                     var sQuery =  $("#query").val();
+                     if(sQuery == ""){
+                           alert("Please type a query to submit.");
+                     }else{
+                           var query = {"statement": sQuery};
+                           var sUrl = URL + "server/"+"RDF"+"/query";
+                           $.ajax({
+                                         type: "POST",
+                                         url: sUrl,
+                                         contentType: "application/json",
+                                         data: JSON.stringify(query),
+                                         //dataType: "json",
+                                         async: false,
+                                         success: function parse(resp, status, xhr) {
+                                            $("#message").html("STATUS: " + xhr.status + " " + xhr.statusText + "\n" + resp);
+                                            $("#message").hide();
+                                                arrayVars = resp.head.vars;
+                                               arrayBindings = resp.results.bindings;
+                                                renderQuery();
+                                         },
+                                         error: function(resp, status, xhr){
+                                                $("#message").html("ERROR: " + resp.status + " " + resp.statusText + "\n" + xhr);
+                                                $("#message").show();
+                                         }
+                                        
+                                  });   
+                           }
+              }
+		
 	</script>
 	
 	<script type="text/javascript">
